# tau_plus_plus

./: .gitignore  CMakeLists.txt  LICENSE.md  project.cbp  project_linux.cbp  Руководство - tau++ Частотные характеристики v1.2.1.docx  Руководство - tau++ Частотные характеристики.docx
libs/: glfl.cpp
libs/include/: stb_image.h
libs/include/GLFL/: glfl.h  glfl_func_indices.h  glfl_proxy_proto__.h  glfl_simple_proto__.h
release/: table.txt
src/: events.cpp  events.h  everything.h  exceptions.h  graphics.cpp  graphics.h  input.cpp  input.h  main.cpp  mat.h  platform.h  preprocessor.h  program.cpp  program.h  random.h  reflection.h  renderers2d.h  rpoly.f  strings.cpp  strings.h  template_utils.h  timing.h  ui.cpp  ui.h  utils.h  window.cpp  window.h
